--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,70 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.wonkydan.myappportfolio.MainActivity"
-    android:orientation="vertical">
+    tools:context="com.wonkydan.myappportfolio.MainActivity">
 
-    <TextView
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:text="@string/title"
-        android:textSize="24sp"
-        android:textAlignment="gravity"
-        android:gravity="center"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"/>
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:text="@string/popular_movies"
-        android:id="@+id/popular_movies"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        style="@style/ButtonStyle"
-        />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:text="@string/stock_hawk"
-        android:id="@+id/stock_hawk"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        style="@style/ButtonStyle"
-        />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:text="@string/build_it_bigger"
-        android:id="@+id/build_it_bigger"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        style="@style/ButtonStyle"
-        />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:text="@string/make_your_app_material"
-        android:id="@+id/make_your_app_material"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        style="@style/ButtonStyle"
-        />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:text="@string/go_ubiquitous"
-        android:id="@+id/go_ubiquitous"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        style="@style/ButtonStyle"
-        />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="44dp"
-        android:text="@string/capstone"
-        android:id="@+id/capstone"
-        android:layout_marginBottom="@dimen/activity_vertical_margin"
-        style="@style/ButtonStyle"
-        />
-</LinearLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:gravity="center"
+            android:text="@string/title"
+            android:textAlignment="gravity"
+            android:textSize="24sp" />
+
+        <Button
+            android:id="@+id/popular_movies"
+            style="@style/ButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:text="@string/popular_movies" />
+
+        <Button
+            android:id="@+id/stock_hawk"
+            style="@style/ButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:text="@string/stock_hawk" />
+
+        <Button
+            android:id="@+id/build_it_bigger"
+            style="@style/ButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:text="@string/build_it_bigger" />
+
+        <Button
+            android:id="@+id/make_your_app_material"
+            style="@style/ButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:text="@string/make_your_app_material" />
+
+        <Button
+            android:id="@+id/go_ubiquitous"
+            style="@style/ButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:text="@string/go_ubiquitous" />
+
+        <Button
+            android:id="@+id/capstone"
+            style="@style/ButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="44dp"
+            android:layout_marginBottom="@dimen/activity_vertical_margin"
+            android:text="@string/capstone" />
+    </LinearLayout>
+</ScrollView>
